[gd_scene load_steps=9 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Map/Map1.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Others/Block_Horizontal.png" type="Texture" id=4]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=5]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 830, 0, 830, 120, 400, 120, 750, 0, 290, 120, 290, 90, 150, 120, 120, 120, 120, 90, 160, 90, 90, 90, 90, 120, 50, 120, 50, 90, 60, 0, 20, 90, 20, 120, -20, 120, -20, 90, -50, 90, -50, 120, -80, 120, -80, 0, 290, 0, 290, -110, 420, -110, 420, 0, 750, -100, 830, -100, 160, 120, 170, 120 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 2, 4, 5 ), PoolIntArray( 6, 7, 8, 9 ), PoolIntArray( 10, 11, 12, 13, 14 ), PoolIntArray( 15, 16, 17, 18 ), PoolIntArray( 19, 20, 21, 22 ), PoolIntArray( 19, 22, 14, 18 ), PoolIntArray( 15, 18, 14 ), PoolIntArray( 13, 15, 14 ), PoolIntArray( 10, 14, 23, 8 ), PoolIntArray( 23, 24, 25, 26, 2 ), PoolIntArray( 3, 27, 28, 0 ), PoolIntArray( 26, 3, 2 ), PoolIntArray( 23, 2, 5 ), PoolIntArray( 23, 5, 9 ), PoolIntArray( 8, 23, 9 ), PoolIntArray( 6, 9, 29 ), PoolIntArray( 6, 29, 30 ) ]
outlines = [ PoolVector2Array( 830, 0, 830, -100, 750, -100, 750, 0, 420, 0, 420, -110, 290, -110, 290, 0, 60, 0, -80, 0, -80, 120, -50, 120, -50, 90, -20, 90, -20, 120, 20, 120, 20, 90, 50, 90, 50, 120, 90, 120, 90, 90, 120, 90, 120, 120, 150, 120, 170, 120, 160, 120, 160, 90, 290, 90, 290, 120, 400, 120, 830, 120 ) ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 46.5377, 51.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 86.6988, 35.7989 )

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="Map1" parent="." instance=ExtResource( 2 )]
editor/display_folded = true

[node name="CustomerWait1" type="Position2D" parent="Map1"]
position = Vector2( -70, 165 )

[node name="CustomerWait2" type="Position2D" parent="Map1"]
position = Vector2( 0, 165 )

[node name="CustomerWait3" type="Position2D" parent="Map1"]
position = Vector2( 70, 165 )

[node name="CustomerWait4" type="Position2D" parent="Map1"]
position = Vector2( 140, 165 )

[node name="CustomerSpawn" type="Position2D" parent="Map1"]
position = Vector2( 880, -50 )
rotation = 1.5708

[node name="Navigation2D" type="Navigation2D" parent="Map1"]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Map1/Navigation2D"]
position = Vector2( -2, 60 )
navpoly = SubResource( 1 )

[node name="Car starting" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 880, 100 )
gravity_vec = Vector2( 0, 0 )
collision_mask = 10
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Car starting"]
position = Vector2( 0, 30 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 1000, 80 )
rotation = 3.14159

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 552, 385 )
current = true
zoom = Vector2( 1.45, 1.5 )

[node name="spawn_customer_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Customers" type="Node2D" parent="."]

[node name="Car Ending1" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -90, 160 )
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Car Ending1"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 350, 100 )
texture = ExtResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="GameTimer" type="Timer" parent="."]
wait_time = 14.0
one_shot = true
autostart = true
[connection signal="body_entered" from="Car starting" to="." method="_on_Car_starting_body_entered"]
[connection signal="body_exited" from="Car starting" to="." method="_on_Car_starting_body_exited"]
[connection signal="timeout" from="spawn_customer_timer" to="." method="_on_spawn_customer_timer_timeout"]
[connection signal="body_entered" from="Car Ending1" to="." method="_on_Car_Ending_body_entered"]
